--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Discord bot token
-TOKEN=
+TOKEN="MTEwOTc3MTI5OTEwODE1OTUxOA.GuyUKU.ISWH-i4YAKesfaY6GKuSEah1POmBLEQVXHjRk4"
 
 # Avoid interval too low, this may cause rate limit
 # Stay above 30 seconds is a good recommendation
